[CDF-635] Integrate the Date Range Picker Component into CDF     - added a scrollbar

--- a/core-js/src/main/javascript/cdf-legacy/components/date/resources/css/component.css
+++ b/core-js/src/main/javascript/cdf-legacy/components/date/resources/css/component.css
@@ -476,7 +476,7 @@ body {
 }
 
 .calendar-block table {
-  width: 100%;
+  width: 98%;
   table-layout: fixed;
 }
 
@@ -669,4 +669,12 @@ body {
   color: #FFF;
   border-color: #005CA7;
   cursor: default;
+}
+
+div.calendar-container {
+  overflow: auto;
+}
+
+div.calendar-container.mCustomScrollbar {
+  max-height: 250px;
 }
